Fixed code smells reported by Sonar