@@ -16,7 +16,6 @@ import org.testcontainers.utility.DockerImageName;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static net.brunomendola.querity.api.Querity.filterByNative;
 import static net.brunomendola.querity.api.Querity.not;
@@ -25,7 +24,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @SpringBootTest(classes = QuerityElasticsearchTestApplication.class)
 @Testcontainers
-public class QuerityElasticsearchImplTests extends QuerityGenericSpringTestSuite<Person, String> {
+class QuerityElasticsearchImplTests extends QuerityGenericSpringTestSuite<Person, String> {
 
   private static final String ELASTICSEARCH_IMAGE = "docker.elastic.co/elasticsearch/elasticsearch:8.16.5";
 
@@ -64,7 +63,7 @@ public class QuerityElasticsearchImplTests extends QuerityGenericSpringTestSuite
         .isNotEmpty()
         .isEqualTo(entities.stream()
             .filter(p -> entity1.getLastName().equals(p.getLastName()))
-            .collect(Collectors.toList()));
+            .toList());
   }
 
   @Test
